--- a/style.css
+++ b/style.css
@@ -1,97 +1,127 @@
-/* ---Fonts--- */
+:root {
+  --clr-dgreen: rgb(31, 63, 50);
+  --clr-lgreen: rgb(53, 98, 77);
+  --clr-dterracot: rgb(128, 74, 40);
+  --clr-lterracot: rgb(188, 99, 55);
+  --clr-dbeige: rgb(155, 133, 110);
+  --clr-lbeige: rgb(245, 245, 219);
+}
 
+/* ---Fonts--- */
 .satisfy-regular {
     font-family: "Satisfy", cursive;
     font-weight: 400;
     font-style: normal;
 }
-
 .merriweather-light {
     font-family: "Merriweather", serif;
     font-weight: 300;
     font-style: normal;
-  }
-  
-  .merriweather-regular {
+}
+.merriweather-regular {
     font-family: "Merriweather", serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
-  .merriweather-bold {
+}
+.merriweather-bold {
     font-family: "Merriweather", serif;
     font-weight: 700;
     font-style: normal;
-  }
-  
-  .merriweather-black {
+}
+.merriweather-black {
     font-family: "Merriweather", serif;
     font-weight: 900;
     font-style: normal;
-  }
-  
-  .merriweather-light-italic {
+}
+.merriweather-light-italic {
     font-family: "Merriweather", serif;
     font-weight: 300;
     font-style: italic;
-  }
-  
-  .merriweather-regular-italic {
+}
+.merriweather-regular-italic {
     font-family: "Merriweather", serif;
     font-weight: 400;
     font-style: italic;
-  }
-  
-  .merriweather-bold-italic {
+}
+.merriweather-bold-italic {
     font-family: "Merriweather", serif;
     font-weight: 700;
     font-style: italic;
-  }
-  
-  .merriweather-black-italic {
+}
+.merriweather-black-italic {
     font-family: "Merriweather", serif;
     font-weight: 900;
     font-style: italic;
-  }
+}
 
 /* ---Styles--- */
-
 body {
     margin: 0;
     font-family: "Merriweather", sans-serif;
-    background-color: beige;
+    background-color: rgb(245, 245, 219);
+    color: rgb(20, 11, 7);
+    max-width: 700px;
+    margin-inline: auto;
 }
 
 main {
     padding-inline: 1rem;
 }
-
 section {
     padding-inline: 1rem;
 }
-
 h1,h2,h3,h4,h5,h6 {
     font-family: "Satisfy", sans-serif;
+    margin: 0;
 }
-
 ul, ol {
     list-style: none;
     padding: 0;
+}
+img {
+  max-width: 100%;
+  width: 100%;
+  display: block;
 }
 
 .menu-guide {
     display: flex;
     justify-content: space-around;
-    background-color: bisque;
+    background-color: var(--clr-lterracot);
 }
 .menu-guide ul {
     display: flex;
     gap: 1rem;
 }
-
+#hero {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-block: 1rem;
+  gap: 0.6rem;
+}
+#hero img {
+  width: 150px;
+  margin: auto;
+  border-radius: 50%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+}
 .countdown {
   display: inline-flex;
-  background-color: crimson;
+  background-color: var(--clr-lgreen);
+  text-align: center;
+  border-radius: 12px;
+  gap: 1rem;
+  padding: 0.5rem;
+  margin: auto
+}
+.countdown p {
+  font-size: 1.6rem;
+  margin: 0;
+}
+.countdown span {
+  font-size: 0.8rem;
 }
 
 .images img {
