--- a/style.css
+++ b/style.css
@@ -74,21 +74,34 @@ h1,h2,h3,h4,h5,h6 {
     font-family: "Satisfy", sans-serif;
     margin: 0;
 }
+p, strong {
+  margin: 0;
+  text-wrap: pretty;
+}
 ul, ol {
     list-style: none;
     padding: 0;
 }
-
 img {
   max-width: 100%;
   width: 100%;
   display: block;
 }
 
+/* Style Classes */
+.logo {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 0;
+  line-height: 1.5;
+}
 .menu-guide {
     display: flex;
     justify-content: space-around;
     background-color: var(--clr-lterracot);
+    position: fixed;
+    width: 700px;
+    z-index: 10;
 }
 .menu-guide ul {
     display: flex;
@@ -100,15 +113,36 @@ img {
   flex-direction: column;
   align-items: center;
 }
+.hero strong {
+  margin-top: 4.5rem;
+}
+.hero h1 {
+  font-size: 3rem;
+  margin-block: 1.1rem;
+}
 .hero-imgs {
+  position: relative;
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 .hero-imgs img {
-  width: 250px;
-  border-radius: 50% 50% 0 0;
-  aspect-ratio: 9 / 11;
+  width: 400px;
+  border-radius: 5rem 5rem 0 0;
+  border-radius: 0.1rem;
+  aspect-ratio: 9 / 16;
   object-fit: cover;
+}
+.hero-img-date {
+  position: relative;
+}
+.hero-img-date span{
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  font-size: 3rem;
+  color: var(--clr-dterracot);
+  background-color: var(--clr-dgreen)
 }
 
 .countdown {
@@ -118,7 +152,8 @@ img {
   border-radius: 12px;
   gap: 1rem;
   padding: 0.5rem;
-  margin: auto
+  margin-inline: auto;
+  margin-block: 1.2rem;
 }
 .countdown p {
   font-size: 1.6rem;
@@ -127,6 +162,69 @@ img {
 .countdown span {
   font-size: 0.8rem;
 }
+
+.context {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+.context p, .context strong {
+  display: block;
+  max-width: 40ch;
+  margin-inline: auto;
+  text-align: center;
+}
+.context-date {
+  margin-inline: auto;
+  text-align: center;
+}
+.context-date span, .context-date div span {
+  display: block;
+  position: relative;
+}
+.context-date div {
+  display: flex;
+  gap: 4rem;
+}
+.context-date-day {
+  font-size: 1.75rem;
+  position: relative;
+  margin-bottom: 0.75rem;
+}
+.context-date-month, .context-date-number-year {
+  font-size: 1.5rem;
+}
+.context-date-month::before, .context-date-number-year::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 150px;
+  height: 3px;
+  left: 50%;
+  transform: translate(-50%, -200%);
+  background-color: rgb(112, 59, 202);
+}
+.context-date-month::after, .context-date-number-year::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 150px;
+  height: 3px;
+  left: 50%;
+  transform: translate(-50%, 100%);
+  background-color: rgb(59, 202, 195);
+}
+.context-date-number-day {
+  font-size: 2rem;
+}
+
+#info aside {
+  display: flex;
+  flex-direction: column;
+align-items: center;
+}
+
 
 .images img {
   width: 100%;
