--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 :root {
   --clr-dgreen: rgb(31, 63, 50);
   --clr-lgreen: rgb(53, 98, 77);
-  --clr-dterracot: rgb(128, 74, 40);
-  --clr-lterracot: rgb(188, 99, 55);
+  --clr-dterracot: #472109;
+  --clr-terracot: rgb(210, 101, 33);
+  --clr-lterracot: rgb(173, 79, 33);
+  --clr-gterracot: rgb(90, 79, 72);
   --clr-dbeige: rgb(155, 133, 110);
   --clr-lbeige: rgb(245, 245, 219);
 }
@@ -57,11 +59,14 @@
 /* ---Styles--- */
 body {
     margin: 0;
-    font-family: "Merriweather", sans-serif;
+    font-family: "Merriweather", serif;
     background-color: rgb(245, 245, 219);
-    color: rgb(20, 11, 7);
+    color: var(--clr-dterracot);
     max-width: 700px;
     margin-inline: auto;
+    background-image: url('img/wallpaper_puung_3.png');
+    /* background-repeat: no-repeat; */
+    background-size: contain;
 }
 
 main {
@@ -73,6 +78,7 @@ section {
 h1,h2,h3,h4,h5,h6 {
     font-family: "Satisfy", sans-serif;
     margin: 0;
+    color: var(--clr-dterracot);
 }
 p, strong {
   margin: 0;
@@ -86,6 +92,9 @@ img {
   max-width: 100%;
   width: 100%;
   display: block;
+}
+figure {
+  margin: 0;
 }
 
 /* Style Classes */
@@ -127,9 +136,9 @@ img {
 }
 .hero-imgs img {
   width: 400px;
-  border-radius: 5rem 5rem 0 0;
+  /* border-radius: 5rem 5rem 0 0; */
   border-radius: 0.1rem;
-  aspect-ratio: 9 / 16;
+  /* aspect-ratio: 9 / 16; */
   object-fit: cover;
 }
 .hero-img-date {
@@ -141,13 +150,14 @@ img {
   left: 50%;
   transform: translate(-50%, -100%);
   font-size: 3rem;
-  color: var(--clr-dterracot);
-  background-color: var(--clr-dgreen)
+  color: rgb(248, 224, 215);
+  /* background-color: var(--clr-dgreen) */
 }
 
 .countdown {
   display: inline-flex;
-  background-color: var(--clr-lgreen);
+  background-color: var(--clr-dterracot);
+  color: rgb(240, 215, 215);
   text-align: center;
   border-radius: 12px;
   gap: 1rem;
@@ -161,6 +171,27 @@ img {
 }
 .countdown span {
   font-size: 0.8rem;
+}
+
+/* All icons of website */
+.icon {
+  width: 75px;
+  margin-inline: auto;
+}
+.icon.mappin {
+  width: 65px;
+}
+.icon.parking {
+  width: 100px;
+}
+.icon.dresscode-men {
+  width: 80px;
+}
+.icon.dresscode-women {
+  width: 65px;
+}
+.icon.gift {
+  width: 65px;
 }
 
 .context {
@@ -192,43 +223,69 @@ img {
   position: relative;
   margin-bottom: 0.75rem;
 }
-.context-date-month, .context-date-number-year {
+.context-date-month, 
+.context-date-number-day,
+.context-date-number-year {
   font-size: 1.5rem;
 }
 .context-date-month::before, .context-date-number-year::before {
   content: '';
   position: absolute;
   display: block;
-  width: 150px;
-  height: 3px;
+  width: 110px;
+  height: 2px;
   left: 50%;
   transform: translate(-50%, -200%);
-  background-color: rgb(112, 59, 202);
+  background-color: rgb(26, 9, 56);
 }
 .context-date-month::after, .context-date-number-year::after {
   content: '';
   position: absolute;
   display: block;
-  width: 150px;
-  height: 3px;
+  width: 110px;
+  height: 2px;
   left: 50%;
   transform: translate(-50%, 100%);
-  background-color: rgb(59, 202, 195);
-}
-.context-date-number-day {
-  font-size: 2rem;
+  background-color: rgb(6, 46, 44);
 }
 
 #info aside {
   display: flex;
   flex-direction: column;
-align-items: center;
+  align-items: center;
+  text-align: center;
 }
-
+#info aside ul li {
+  margin-bottom: 0.5rem;
+}
+#info h2 {
+  font-size: 2.2rem;
+}
+#info .time p {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+#info .place {
+  margin-bottom: 1.25rem;
+}
+#info .park {
+  margin-bottom: 1.5rem;
+}
+#cloth-code figure {
+  display: flex;
+}
+#info #cloth-code {
+  margin-bottom: 1.75rem;
+}
+#info #donation {
+  margin-bottom: 2rem;
+}
 
 .images img {
-  width: 100%;
+  margin-bottom: 0.5rem;
+  border-radius: 0.3rem;
 }
 .images {
-  columns: 300px
+  columns: 250px;
+  gap: 0.5rem;
 }
