--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   --clr-lterracot: rgb(173, 79, 33);
   --clr-gterracot: rgb(90, 79, 72);
   --clr-dbeige: rgb(155, 133, 110);
-  --clr-lbeige: rgb(245, 245, 219);
+  --clr-lbeige: #f5f5db;
 }
 
 /* ---Fonts--- */
@@ -389,6 +389,30 @@ figure {
 }
 #info #donation {
   margin-bottom: 2rem;
+}
+
+.list-of-gifts {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  margin-top: 1rem;
+  color: var(--clr-lbeige);
+}
+.list-of-gifts ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 0.3rem;
+  gap: 0.4rem;
+}
+.list-of-gifts details {
+  background-color: var(--clr-dterracot);
+  border-radius: 1rem;
+  /* border: 2px solid blue */
+}
+.list-of-gifts details summary {
+  padding: 0.5rem;
 }
 
 .images img {
